--- a/sass/layouts/_hero-features.scss
+++ b/sass/layouts/_hero-features.scss
@@ -1,26 +1,39 @@
 .main__features {
-  padding-top: 94px;
+  /* padding-top: 94px; */
 }
 
 .features {
-
+  
   &__list {
-    height: 248px;
+    /* height: 226px; */
+    
     display: flex;
     gap: 30px;
+
+    flex-wrap: wrap;
   }
 
   &__item {
-    width: 270px;
+    width: 100%;
+    /* width: 270px; */
 
     &:nth-child(2),
     &:nth-child(3) {
       height: 224px;
     }
+
+  @media screen and (min-width: 768px){
+    width: calc((100% - 30px)/2);
+  }
+
+  @media screen and (min-width: 1200px){
+    width: calc((100% - 90px)/4);
+  }
+
   }
 
   &__wrap {
-    width: 270px;
+    width: 100%;
     height: 120px;
     margin-bottom: 30px;
     background: var(--background-our-team);
@@ -36,6 +49,8 @@
     text-transform: uppercase;
     color: var(--secondary-text-color);
     margin-bottom: 10px;
+
+    text-align: center;
   }
 
   &__text {
