--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -2,9 +2,10 @@ footer {
   background: var(--background-hero-footer);
   padding-top: 60px;
   padding-bottom: 60px;
+  max-width: 100%;
 }
 
 .footer__container {
-  display: flex;
-  align-items: baseline;
+/*   display: flex;
+  align-items: baseline; */
 }
