--- a/sass/base/_commons.scss
+++ b/sass/base/_commons.scss
@@ -7,7 +7,8 @@ body {
   font-size: 14px;
   letter-spacing: 0.03em;
   background-color: var(--white-color);
-  padding-top: 80px;
+/*   padding-top: 80px; */
+  padding-top: 60px;
 }
 
 main {
