--- a/sass/layouts/_footer-contacts.scss
+++ b/sass/layouts/_footer-contacts.scss
@@ -1,10 +1,14 @@
 .footer{
 
   &__contacts-item:not(:last-child) {
-  margin-bottom: 9px;
+  /* margin-bottom: 9px; */
+  margin-bottom: 10px;
   }
 
 &__adds {
+  display: flex;
+  justify-content: center;
+  
   font-style: normal;
   line-height: 1.71;
   color: var(--white-color);
@@ -17,6 +21,9 @@
 }
 
 &__contact-link {
+  display: flex;
+  justify-content: center;
+
   font-style: normal;
   font-weight: 400;
   line-height: 1.71;
