--- a/sass/layouts/_footer-logo.scss
+++ b/sass/layouts/_footer-logo.scss
@@ -1,9 +1,12 @@
 address {
-  display: flex;
-  gap: 70px;
+/*   display: flex;
+  gap: 70px; */
 }
 
 .footer__logo {
-  display: block;
-  margin-bottom: 20px;
+  /* display: block; */
+  display: flex;
+  justify-content: center;
+  margin-bottom: 28px;
+  /* margin-bottom: 20px; */
 }
