--- a/sass/layouts/_footer-networks.scss
+++ b/sass/layouts/_footer-networks.scss
@@ -1,7 +1,9 @@
 .footer{
 
   &__soc {
-    margin-left: 70px;
+  /*   margin-left: 70px; */
+  margin-top: 60px;
+  margin-bottom: 60px;
 
   &-title {
     font-weight: 700;
@@ -10,6 +12,9 @@
     text-transform: uppercase;
     color: var(--white-color);
     margin-bottom: 20px;
+
+    display: flex;
+    justify-content: center;
   }
 
   &-list {
