--- a/sass/layouts/_footer-subscription.scss
+++ b/sass/layouts/_footer-subscription.scss
@@ -1,5 +1,5 @@
 .footer__subs {
-    margin-left: 93px;
+  /* margin-left: 93px; */
 }
 
 .subs__title {
@@ -9,14 +9,19 @@
   text-transform: uppercase;
   color: var(--white-color);
   margin-bottom: 20px;
+
+  display: flex;
+  justify-content: center;
 }
 
 .subs__wrap {
     margin-top: 20px;
-    display: flex;
+    /* display: flex; */
 
     &-input {
-      width: 358px;
+      margin-bottom: 20px;
+      /* width: 358px; */
+      width: 100%;
       height: 50px;
       padding-left: 16px;
       padding-right: 16px;
@@ -54,7 +59,8 @@
     border: transparent;
     @include align-list;
     justify-content: center;
-    margin-left: 12px;
+    /* margin-left: 12px; */
+    margin: 0 auto;
     transition: background-color var(--animation);
 
     &:hover {
