--- a/sass/layouts/_header-contacts.scss
+++ b/sass/layouts/_header-contacts.scss
@@ -1,16 +1,35 @@
 .navigation {
 
   &__contacts {
+    display: none;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
+    
+  @media screen and (min-width: 1200px) {
     padding-top: 32px;
     padding-bottom: 32px;
+  }
   }
 }
 
 .contacts {
   
   &__list {
+
+    @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
+
+    @media screen and (min-width: 1200px) {
     display: flex;
     gap: 30px;
+  }
   }
 
   &__link {
