--- a/sass/layouts/_header-logo.scss
+++ b/sass/layouts/_header-logo.scss
@@ -7,8 +7,11 @@
 }
 
 .navigation__logo {
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+
+/*   padding-top: 24px;
+  padding-bottom: 25px; */
 }
 
 /*---------- modifier ----------*/
