--- a/sass/layouts/_hero-banner.scss
+++ b/sass/layouts/_hero-banner.scss
@@ -1,6 +1,6 @@
 .main__banner {
   background: var(--background-hero-footer);
-  padding: 200px 0;
+  /* padding: 200px 0; */
   background-image: linear-gradient(rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)),
     url(../img/hero-bg.jpg);
@@ -16,8 +16,11 @@
 
   &__title {
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    /* font-size: 44px;
+    line-height: 1.36; */
+    font-size: 26px;
+    line-height: 1.62;
+
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
