--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -5,7 +5,8 @@ footer {
   max-width: 100%;
 }
 
-.footer__container {
-/*   display: flex;
-  align-items: baseline; */
+/* .footer__container {
+  display: flex;
+  align-items: baseline;
 }
+ */
