--- a/sass/base/_commons.scss
+++ b/sass/base/_commons.scss
@@ -29,11 +29,18 @@ main {
 }
 
 section {
+  @include mobile {
   padding-top: 60px;
   padding-bottom: 60px;
+  }
 
-  @media screen and (min-width: 768px) {
+  @include tablet {
     padding-top: 60px;
     padding-bottom: 60px;
+  }
+
+  @include desktop {
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
