--- a/sass/layouts/_hero-people.scss
+++ b/sass/layouts/_hero-people.scss
@@ -7,15 +7,18 @@
 .people {
 
   &__title {
-    /* @include font(700, 36px, 1.17, none); */
     @include font(700, 28px, calc (33/28), none);
     font-weight: 700;
     font-size: 28px;
     line-height: 33px;
     text-align: center;
     color: var(--secondary-text-color);
-    /* margin-bottom: 50px; */
     margin-bottom: 30px;
+
+  @include desktop {
+    @include font(700, 36px, 1.17, none);
+    margin-bottom: 50px;
+  }
   }
 
   &__list {
@@ -28,17 +31,16 @@
   &__item {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    /* width: calc((100% - 90px)/4); */
     width: 100%;
     text-align: center;
 
-    @media screen and (min-width: 768px) {
-        width: calc((100% - 30px)/2);
-      }
+    @include tablet {
+      width: calc((100% - 30px)/2);
+    }
     
-      @media screen and (min-width: 1200px) {
-        width: calc((100% - 90px)/4);
-      }
+    @include desktop {
+      width: calc((100% - 90px)/4);
+    }
   }
 
   &__img {
@@ -49,8 +51,11 @@
     background: var(--white-color);
     padding-top: 30px;
     padding-bottom: 24px;
-    /* padding-bottom: 30px; */
     align-items: center;
+
+  @include desktop {
+    padding-bottom: 30px;
+  }
   }
 
   &__name {
