--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -16,4 +16,5 @@
   --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   --modal-border-color: rgba(33, 33, 33, 0.2);
   --placeholder-color: rgba(117, 117, 117, 0.5);
+  --banner-gradient: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
 }
