--- a/css/main.css
+++ b/css/main.css
@@ -186,6 +186,26 @@ main {
     gap: 50px;
   }
 }
+.menu__open {
+  margin-left: auto;
+  background-color: transparent;
+  border-color: transparent;
+  fill: var(--secondary-text-color);
+  transition: fill var(--animation);
+}
+.menu__open:hover, .menu__open:focus {
+  fill: var(--accent-color);
+}
+.menu__close {
+  margin-left: auto;
+  background-color: transparent;
+  border-color: transparent;
+  fill: var(--secondary-text-color);
+  transition: fill var(--animation);
+}
+.menu__close:hover, .menu__close:focus {
+  fill: var(--accent-color);
+}
 .menu__link {
   font-weight: 500;
   line-height: 1.14;
@@ -211,6 +231,16 @@ main {
   border-radius: 2px;
   bottom: -32px;
   position: absolute;
+}
+
+/* ----- MOBIL-MENU ----- */
+.mob__menu {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  position: fixed;
+  background-color: var(--white-color);
+  padding: 48px 40px;
 }
 
 .navigation__contacts {
