--- a/sass/layouts/_modal-window-content.scss
+++ b/sass/layouts/_modal-window-content.scss
@@ -6,14 +6,17 @@
     line-height: calc(23/20);
     color: var(--secondary-text-color);
     text-align: center;
-    margin: 0 auto;
+    /* margin: 0 auto; */
+    margin: 0 40px;
+
     margin-top: 40px;
     width: 360px;
   }
 
   &-form {
     margin-top: 12px;
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
+    padding-bottom: 40px;
     margin-left: 40px;
     margin-right: 40px;
   }
@@ -93,7 +96,8 @@
     padding: 10px 52px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    margin-top: 30px;
+    margin-top: 31px;
+    /* margin-top: 30px; */
     border: transparent;
     transition: background-color var(--animation);
 
@@ -125,8 +129,12 @@
 
 
   &-label {
-    font-size: 14px;
-    line-height: 1.71;
+    /* font-size: 14px; */
+    /* line-height: 1.71; */
+
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
     color: var(--primary-text-color);
     @include align-list;
     justify-content: center;
@@ -157,9 +165,13 @@
 }
 
 .term-link {
-  padding-left: 5px;
-  font-size: 14px;
-  line-height: 1.71;
+/*   padding-left: 5px; */
+  padding-left: 2px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+/*   font-size: 14px;
+  line-height: 1.71; */
   color: var(--accent-color);
   text-decoration: underline;
   text-decoration-skip-ink: none;
