--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,12 @@ main {
   margin: -1px;
 }
 
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
 @media screen and (min-width: 480px) {
   section {
     padding-top: 60px;
@@ -165,6 +171,114 @@ main {
   color: var(--white-color);
 }
 
+.menu__open {
+  margin-left: auto;
+  background-color: transparent;
+  border-color: transparent;
+  cursor: pointer;
+  fill: var(--secondary-text-color);
+  transition: fill var(--animation);
+}
+.menu__open:hover, .menu__open:focus {
+  fill: var(--accent-color);
+}
+
+.mob__menu {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  position: fixed;
+  background-color: var(--white-color);
+  transition: opacity var(--animation), visibility var(--animation);
+}
+.mob__menu > .mob__menu-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+}
+.mob__menu-container {
+  padding: 48px 40px;
+  position: relative;
+}
+.mob__menu-list {
+  margin-bottom: 32px;
+}
+.mob__menu-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mob__menu-link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+  transition: color var(--animation);
+}
+.mob__menu-link:hover, .mob__menu-link:focus {
+  color: var(--accent-color);
+}
+
+.mob__contacts {
+  margin-bottom: 64px;
+}
+.mob__contacts-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mob__contacts-link {
+  color: var(--primary-text-color);
+}
+
+.mob__tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.mob__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+}
+
+.mob__soc-list {
+  display: flex;
+  gap: 10px;
+}
+.mob__soc-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.mob__soc-item:not(:last-child) .mob__soc-link::after {
+  content: "";
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  margin-left: 10px;
+}
+
+.menu__close {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: fill var(--animation);
+}
+.menu__close:hover, .menu__close:focus {
+  fill: var(--accent-color);
+}
+
 .header__navigation {
   display: flex;
 }
@@ -185,16 +299,6 @@ main {
     display: flex;
     gap: 50px;
   }
-}
-.menu__open {
-  margin-left: auto;
-  background-color: transparent;
-  border-color: transparent;
-  fill: var(--secondary-text-color);
-  transition: fill var(--animation);
-}
-.menu__open:hover, .menu__open:focus {
-  fill: var(--accent-color);
 }
 .menu__close {
   margin-left: auto;
@@ -231,16 +335,6 @@ main {
   border-radius: 2px;
   bottom: -32px;
   position: absolute;
-}
-
-/* ----- MOBIL-MENU ----- */
-.mob__menu {
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  position: fixed;
-  background-color: var(--white-color);
-  padding: 48px 40px;
 }
 
 .navigation__contacts {
@@ -481,7 +575,7 @@ main {
 .people__title {
   font-weight: 700;
   font-size: 28px;
-  line-height: calc 1.1785714286;
+  line-height: 1.18;
   letter-spacing: none;
   font-weight: 700;
   font-size: 28px;
@@ -928,6 +1022,8 @@ address {
 }
 
 .modal {
+  max-height: 609px;
+  overflow: auto;
   /* width: 528px; */
   width: 450px;
   margin-top: 94px;
@@ -969,13 +1065,15 @@ address {
   line-height: 1.15;
   color: var(--secondary-text-color);
   text-align: center;
-  margin: 0 auto;
+  /* margin: 0 auto; */
+  margin: 0 40px;
   margin-top: 40px;
   width: 360px;
 }
 .modal-form {
   margin-top: 12px;
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
+  padding-bottom: 40px;
   margin-left: 40px;
   margin-right: 40px;
 }
@@ -1052,7 +1150,8 @@ address {
   padding: 10px 52px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  margin-top: 30px;
+  margin-top: 31px;
+  /* margin-top: 30px; */
   border: transparent;
   transition: background-color var(--animation);
 }
@@ -1074,8 +1173,11 @@ address {
 }
 
 .checkbox-label {
-  font-size: 14px;
-  line-height: 1.71;
+  /* font-size: 14px; */
+  /* line-height: 1.71; */
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
   color: var(--primary-text-color);
   display: flex;
   align-items: center;
@@ -1104,9 +1206,13 @@ address {
 }
 
 .term-link {
-  padding-left: 5px;
-  font-size: 14px;
-  line-height: 1.71;
+  /*   padding-left: 5px; */
+  padding-left: 2px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  /*   font-size: 14px;
+    line-height: 1.71; */
   color: var(--accent-color);
   text-decoration: underline;
   -webkit-text-decoration-skip-ink: none;
