--- a/sass/base/_commons.scss
+++ b/sass/base/_commons.scss
@@ -28,6 +28,12 @@ main {
   margin: -1px;
 }
 
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
 section {
   @include mobile {
   padding-top: 60px;
