--- a/sass/layouts/_hero-people.scss
+++ b/sass/layouts/_hero-people.scss
@@ -7,7 +7,7 @@
 .people {
 
   &__title {
-    @include font(700, 28px, calc (33/28), none);
+    @include font(700, 28px, 1.18, none);
     font-weight: 700;
     font-size: 28px;
     line-height: 33px;
