--- a/sass/layouts/_modal-window.scss
+++ b/sass/layouts/_modal-window.scss
@@ -20,13 +20,15 @@
 }
 
 .modal {
+
+      max-height: 609px;
+        overflow: auto;
   /* width: 528px; */
 
   width: 450px;
   margin-top: 94px;
   margin-bottom: 93px;
   top: 0;
-
   min-height: 581px;
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
