--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 
 @import "./layouts/header";
 @import "./layouts/header-logo";
+@import "./layouts/mob-menu";
 @import "./layouts/header-navigation";
 @import "./layouts/header-contacts";
 
