--- a/sass/layouts/_footer-contacts.scss
+++ b/sass/layouts/_footer-contacts.scss
@@ -4,14 +4,16 @@
   }
 
   &__contacts-item:not(:last-child) {
-  /* margin-bottom: 9px; */
   margin-bottom: 10px;
+
+  @include desktop {
+    margin-bottom: 9px;
+  }
   }
 
 &__adds {
   display: flex;
   justify-content: center;
-  
   font-style: normal;
   line-height: 1.71;
   color: var(--white-color);
@@ -26,12 +28,15 @@
 &__contact-link {
   display: flex;
   justify-content: center;
-
   font-style: normal;
   font-weight: 400;
   line-height: 1.71;
   color: rgba(255, 255, 255, 0.6);
   transition: color var(--animation);
+
+  @include desktop {
+    justify-content: start;
+  }
 
     &:hover,
     &:focus {
