--- a/sass/layouts/_footer-subscription.scss
+++ b/sass/layouts/_footer-subscription.scss
@@ -1,5 +1,13 @@
 .footer__subs {
-  /* margin-left: 93px; */
+
+  @include tablet {
+    margin-top: 60px;
+  }
+
+  @include desktop {
+    margin-top: 0px;
+    margin-left: 93px;
+  }
 }
 
 .subs__title {
@@ -12,16 +20,26 @@
 
   display: flex;
   justify-content: center;
+
+  @include desktop {
+    display: block;
+  }
 }
 
 .subs__wrap {
     margin-top: 20px;
-    /* display: flex; */
+
+    @include tablet {
+    margin: 0 auto;
+    }
+
+    @include desktop {
+    display: flex;
+    }
 
     &-input {
       margin-bottom: 20px;
-      /* width: 358px; */
-      width: 100%;
+      min-width: 358px;
       height: 50px;
       padding-left: 16px;
       padding-right: 16px;
@@ -39,9 +57,22 @@
       &::placeholder {
         font-size: 16px;
         line-height: 1.25;
-        letter-spacing: 0.03em;
+        letter-spacing: .03em;
         color: rgba(255, 255, 255, 0.6);
       }
+    }
+
+    @include mobile {
+      width: 100%;
+    }
+
+    @include tablet {
+      width: 450px;
+    }
+
+    @include desktop{
+      width: 100%;
+      margin-bottom: 0px;
     }
   }
 
@@ -59,9 +90,13 @@
     border: transparent;
     @include align-list;
     justify-content: center;
-    /* margin-left: 12px; */
     margin: 0 auto;
     transition: background-color var(--animation);
+
+    @include desktop {
+      margin-left: 12px;
+    }
+
 
     &:hover {
       background-color: var(--button-active);
