--- a/sass/layouts/_header-contacts.scss
+++ b/sass/layouts/_header-contacts.scss
@@ -3,11 +3,13 @@
   &__contacts {
     display: none;
 
-  @media screen and (min-width: 768px) {
+  @include tablet {
     display: block;
+    padding-top: 21px;
+    padding-bottom: 21px;
   }
     
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     padding-top: 32px;
     padding-bottom: 32px;
   }
@@ -18,15 +20,13 @@
   
   &__list {
 
-    @media screen and (min-width: 768px) {
+    @include tablet {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    padding-top: 21px;
-    padding-bottom: 21px;
   }
 
-    @media screen and (min-width: 1200px) {
+    @include desktop {
     display: flex;
     gap: 30px;
   }
@@ -34,17 +34,38 @@
 
   &__link {
     font-weight: 500;
-    line-height: 1.14;
+    font-size: 12px;
+    line-height: calc(14 /12);
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
     fill: currentColor;
     @include align-list;
-    gap: 10px;
+    gap: 8px;
     transition: color var(--animation);
+
+    @include desktop {
+      font-size: 14px;
+      line-height: 1.14;
+      gap: 10px;
+    }
 
     &:hover,
     &:focus {
       color: var(--accent-color);
     }
+  }
+}
+
+.img__mail {
+  @include desktop {
+  width: 16px;
+  height: 12px;
+  }
+}
+
+.img__tel {
+  @include desktop {
+  width: 10px;
+  height: 16px;
   }
 }
