--- a/sass/layouts/_header-navigation.scss
+++ b/sass/layouts/_header-navigation.scss
@@ -33,7 +33,7 @@
   &__link {
     font-weight: 500;
     line-height: 1.14;
-    letter-spacing: 0.02em;
+    letter-spacing: .02em;
     color: var(--secondary-text-color);
     gap: 50px;
     position: relative;
