--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ main {
   pointer-events: none;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   section {
     padding-top: 60px;
     padding-bottom: 60px;
@@ -587,7 +587,7 @@ main {
     display: none;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .pictures {
     display: none;
   }
@@ -766,7 +766,7 @@ main {
 .icons__item {
   height: 92px;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .icons__item {
     width: calc((100% - 30px) / 2);
   }
@@ -1105,7 +1105,7 @@ footer {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   .subs__wrap {
     width: 100%;
   }
