--- a/sass/layouts/_footer-networks.scss
+++ b/sass/layouts/_footer-networks.scss
@@ -1,13 +1,18 @@
 .footer{
 
   &__soc {
+  margin-top: 60px;
+  margin-bottom: 60px;
+  /*   margin-left: 70px; */
+
+  @include tablet {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  }
 
   @include desktop {
-
-  /*   margin-left: 70px; */
-  
-/*   margin-top: 60px;
-  margin-bottom: 60px; */
+  margin-top: 0px;
+  margin-bottom: 0px;
   }
 
   &-title {
